--- a/robotica/index.html
+++ b/robotica/index.html
@@ -97,8 +97,10 @@
     <ul>
         <li> Arduino IDE (entorn de desenvolupament per plaques compatibles amb arduino), es un llenguatge derivat de 
         C++ i processing </li>
-        <li>Aliments ecològics i convencionals amb C++.</li>
-        <li>Contaminació atmosfèrica d'una ciutat catalana amb R.</li> 
+        <li> <a href="https://www.processing.org"> Processing </a> amb arduino library que ens permet utilitzar totes <a href="https://processing.org/reference/libraries/"> les biblioteques de processing </a>
+        :exemples figures 3D, Impressio 3D, Realitat virtual i Realitat augmentada, inteligencia artificial, Reconeixement d'objectes i cares
+        , video, etc.... Objectiu del tercer trimestre </li>
+        <li>Mu editor </li> 
     </ul>
 </div>
 
