--- a/robotica/index.html
+++ b/robotica/index.html
@@ -99,8 +99,14 @@
         C++ i processing </li>
         <li> <a href="https://www.processing.org"> Processing </a> amb arduino library que ens permet utilitzar totes <a href="https://processing.org/reference/libraries/"> les biblioteques de processing </a>
         :exemples figures 3D, Impressio 3D, Realitat virtual i Realitat augmentada, inteligencia artificial, Reconeixement d'objectes i cares
-        , video, etc.... Objectiu del tercer trimestre </li>
-        <li>Mu editor </li> 
+        , video, etc.... Objectiu del tercer trimestre. L'únic problema és que hem de tenir connectat l'ordenador a l'arduino si hem d'utilitzar el microfon o la camara
+         o els altaveus o el teclat de l'ordinador,</li>
+        <li>Mu editor és un editor de codi python molt sencill d'utilitzar i compatible amb microcontroladors.
+         Es pot descarregar des de <a href="https://codewith.mu/es/"> la seva web</a>. Hi ha diferents modes
+         de treball amb Mu: "Python3" per escriure codi python i instalar biblioteque externes, "Pygame Zero" 
+            és una bliblioteca python per a fer jocs però més senzilla que pygame, "BBC microbit" per utilitzar 
+            la placa microcontroladora anglesa microbit, "Circuitpython" és un llenguatge de programacio derivat de python per plaques
+         adafruit</li> 
     </ul>
 </div>
 
