--- a/robotica/index.html
+++ b/robotica/index.html
@@ -107,6 +107,10 @@
             és una bliblioteca python per a fer jocs però més senzilla que pygame, "BBC microbit" per utilitzar 
             la placa microcontroladora anglesa microbit, "Circuitpython" és un llenguatge de programacio derivat de python per plaques
          adafruit</li> 
+        <li> Diferents plaques microcontroladores:<a href="https://arduino.cc/"> Arduino</a>,
+            <a href="https://esp32s3.com/"> Esp32-S3</a>,
+         <a href="https://wiki.seeedstudio.com/Seeeduino-XIAO/"> Xiao Samd21 </a>,
+            <a href="https://www.adafruit.com/product/3333"> Adafruit Circuit Playground Express</a>.</li>
     </ul>
 </div>
 
