--- a/robotica/arduino/index.html
+++ b/robotica/arduino/index.html
@@ -1,1 +1,9 @@
-<h1>Arduino</h1>
+<h1>Conceptes generals de microcontroladors</h1>
+<p>Els diferents microcontroladors tenen en comú els següents aspectes:</p>
+<ul>
+  <li>Tipus d'entrades i sortides: el microcontrolador té un processador tipus AVR o Espressif on es conecta
+  entrades digitals, entrades analògiques, sortides digitals i sortides analògiques</li>
+  <li>Les entrades i sortides digitals només funcionen amb 0 o 1 es a dir codi binari, zero significa 
+  0 volts i 1 pot significar 5 volts o 3,3 volts depenent del microcontrolador i del pin que utilitzem.
+  A aquestes entrades podem connectar per exemple interruptors, sensor "foscor/claror" </li>
+</ul>
