--- a/robotica/index.html
+++ b/robotica/index.html
@@ -71,7 +71,7 @@
                     <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-haspopup="true"
                         aria-expanded="false">Braç Robòtic</a>
                     <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                        <a class="dropdown-item" href="https://brivera4pompeu.github.io/robotica/cdirecta">Cinemàtica Directa</a>
+                        <a class="dropdown-item" href="https://precasen4pompeu.github.io/robotica/cdirecta">Cinemàtica Directa</a>
                         <a class="dropdown-item" href="#">Projecte 2</a>
                         <a class="dropdown-item" href="#">Projecte 3</a>
                     </div>
