--- a/robotica/arduino/index.html
+++ b/robotica/arduino/index.html
@@ -7,3 +7,10 @@
   0 volts i 1 pot significar 5 volts o 3,3 volts depenent del microcontrolador i del pin que utilitzem.
   A aquestes entrades podem connectar per exemple interruptors, sensor "foscor/claror" </li>
 </ul>
+<h2>Sortides analògiques tipus PWM </h2>
+<p>PWM significa modulació de l'ample de banda, en anglès <i>Pule Width Modulation</i>
+i es una forma d'aconseguir una sortida analògica a partir de diverses sortides digitals, molt ràpides.</p>
+<p>PWM es representa amb el símbol "~" tal com podem veure a la imatge següent d'un Arduino Uno</p>
+<img src="arduinouno.webp" width="600" height="400">
+<p>Més amunt podem veure que els pins numeros 10 i 11</p>
+</body></html>
