--- a/robotica/arduino/index.html
+++ b/robotica/arduino/index.html
@@ -14,10 +14,48 @@ i es una forma d'aconseguir una sortida analògica a partir de diverses sortides
 <img src="arduinouno.webp" width="600" height="400">
 <p>Més amunt podem veure que els pins numero 3,5,6,9,10 i 11</p>
  <p>Aquests PWM són sortides analògiques de 8 bits, en el cas de Arduino Uno Rev3, d'acord amb el
-  <a href="https://docs.arduino.cc/resource/datasheets7ABXX00080-datasheet.pdf"> abricant</a> que l'anomena Converter</p>
+  <a href="https://docs.arduino.cc/resources/datasheets/ABX00080-datasheet.pdf"> abricant</a> que l'anomena Converter</p>
 <p>Tenir 8 o 12 bits en un convertidor digital analògic o DAC tippus PWM fa que tinguem 2 <sup>8</sup><sup>o 2</sup>
   <sup>10</sup>nivells diferents de corrent, es a dir 256 sinvells diferents o 2048 nivells diferents</p>
 <p>Suposem que tant Arduino Uno Rev3 o Rev4 poden donder 5 volts com a màxim. Quina seria la resolució en milivolts de cada arduino?</p>
 <p>5 volts entre 256 dona 0.01953125 volts= 19 milivolts per arduino Un Rev3</p>
 <p>volts dividint ntre 2048 dona 0.00244140625 volts=2milivolts per arduino Uno Rev4</p>
-</body></html>
+<p>Els milivolts anterior són la resolució que aconseguim. Imaginem que volem regular la  intensitat d'un LED 
+   amb un Arduino Uno Rev3 aconseguim menys fluid i amb graons més grans, es a dir canvis més bruscs perque 256 canvis
+   són menys que 2048 volts. A continuació veurem una imatge que repreenta com combinant moltes senyals digitals 
+   ràpidament sembla que generem un senyal analògic, aixo és la base del PWM.</p>
+<img src="pmw.PNG" widht="600" height="450">
+<p>Quan major és l'amplada del pols vol dir que major és el temps que la sortida digital està en voltatge alt,
+   per exemple 5V i menys temps està a 0V, i per tant el promig  de tots els polsos és més alt. En canvi si 
+   per exemple si cada pols és més estret a 5V vol dir que estarà més temps a 0V, i per tant el promig  de
+   tots els polsos és més baix. A la imatge de a dalt es pot veure com s'encendria un LED o un motor 
+   funcionaria a una velocitat del 10%, 30%, 50%, 90%. Quin percentatge del senyal canviara en un cas i 
+   en un altre?</p>
+  <ul>
+    <li>(0,01953125/5)*100 = 0,390625%</li>
+    <li>(0,00244140625/5)*100 = 0,048828125%</li>
+  </ul>  
+<p>A la taula a continuació veuras els valors per defecte de la freqüència PWM en Arduino Uno Rev3</p>
+<table>
+  <thead>
+    <tr>
+      <th>PIN de Sortida</th><th>Freqüència PWM (Hz)</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr>
+      <td>PINS: 3, 9, 10 i 11</td>
+      <td>490 Hz</td>
+    </tr>
+    <tr>
+      <td>PINS: 5 i 6</td>
+      <td>976 Hz</td>
+    </tr>
+  </tbody>
+</table>
+<p>Nota: la taula HTML anterior te una capçalera com un document HTML, però és diu thead,
+ en comptes de head i es la primera fiera de la taula. Té un cos anomenat tbody, en comptes de bod i es la resta de la taula.
+La taula al definaix eltag table que agrupa thead i tbody. Toteslesfileres tant de thead hi ha elements individuals que són
+ cel·les que pertanyen a la primera filera i s'anomenen th o table heading</p>
+</body>
+</html>
