--- a/index.html
+++ b/index.html
@@ -70,9 +70,9 @@
                     <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-haspopup="true"
                         aria-expanded="false">Braç Robòtic</a>
                     <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                        <a class="dropdown-item" href="https://brivera4pompeu.github.io/robotica/cdirecta">Cinemàtica Directa</a>
-                        <a class="dropdown-item" href="#">Projecte 2</a>
-                        <a class="dropdown-item" href="#">Projecte 3</a>
+                        <a class="dropdown-item" href="https://precasen4.github.io/robotica/cdirecta">Cinemàtica Directa</a>
+                        <a class="dropdown-item" href="https://precasen4pompeu.github.io/robotica">Projecte 2</a>
+                        <a class="dropdown-item" href="https://precasen4pompeu.github.io/arduino">Projecte 3</a>
                     </div>
                 </li>
                 <li class="nav-item">
@@ -89,9 +89,13 @@
     <p>Em dic Pau i sóc alumne del curs B1E de <a href="https://agora.xtec.cat/ies-pompeu-fabra-martorell/">l'institut Pompeu Fabra</a></p>
     <p>A continuació veuràs un llistat amb diferents projectes que farem durant el curs:</p>
     <ul>
+        <li>Codis amb JavaScript, CSS i HTML que construiran una pàgina web on l'usuari introuirà diferents dades d'un braç robòtic i el sistema ens calcularà altres dades i les representarà visualment</li>
+        <!--<ul> significa lista doseordenada o unrdered list i <ol> ordered list o llista ordenada amb números i cada <li> és un element de le llista-->
         <li>Creació d'una obra d'art geomètrica interactiva que reaccioni a la meva veu a través d'un micròfon i a diferents tecles del teclat, al ratolí, que faci moviments repetitius amb sin i cos, moviments aleatoris amb random... Utilitzarem p5.js.</li>
+        <li>Projecte de farmacocinètica: Us deixaré 2 llibre de farmacocinètica amb fòrmules matemàtiques i us donarè un codi inicial de 375 línies on usuari introdueix dades amb un slider com la dosis de fàrmac, la constant d'absorció i la ocnstant d'eliminació, el volum de distribució, la via d'administració (que serà un dropdown que podré trirar oral, intravenosa, transdèrmica, sublingual i inalatòria) nivell tòxic i el sistema em farà un grafic amb unes fòrmules matemàtiques que introduiré i el dibuixarà en un gràfic a temps real i em calculara moltes coses d'interès per un metge o un farmacèutic.</li>
         <li>Aliments ecològics i convencionals amb C++.</li>
         <li>Contaminació atmosfèrica d'una ciutat catalana amb R.</li> 
+        <li>Aprenentatge profund o "deep learning" amb Python i amb JavaScript (farem un codi que ens reconeixerà els contorns d'una obra d'art i ens donarà un codi en p5.js).</li>
     </ul>
 </div>
 
