--- a/index.html
+++ b/index.html
@@ -71,8 +71,8 @@
                         aria-expanded="false">Braç Robòtic</a>
                     <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                         <a class="dropdown-item" href="https://precasen4.github.io/robotica/cdirecta">Cinemàtica Directa</a>
-                        <a class="dropdown-item" href="https://precasen4pompeu.github.io/robotica">Projecte 2</a>
-                        <a class="dropdown-item" href="https://precasen4pompeu.github.io/arduino">Projecte 3</a>
+                        <a class="dropdown-item" href="https://precasen4pompeu.github.io/robotica">Robotica</a>
+                        <a class="dropdown-item" href="#">Projecte 3</a>
                     </div>
                 </li>
                 <li class="nav-item">
