--- a/robotica/index.html
+++ b/robotica/index.html
@@ -72,7 +72,7 @@
                         aria-expanded="false">Braç Robòtic</a>
                     <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                         <a class="dropdown-item" href="https://precasen4pompeu.github.io/robotica/cdirecta">Cinemàtica Directa</a>
-                        <a class="dropdown-item" href="#">Projecte 2</a>
+                        <a class="dropdown-item" href="https://precasen4pompeu.github.io/robotica/arduino">arduino</a>
                         <a class="dropdown-item" href="#">Projecte 3</a>
                     </div>
                 </li>
