--- a/robotica/arduino/index.html
+++ b/robotica/arduino/index.html
@@ -55,7 +55,12 @@ i es una forma d'aconseguir una sortida analògica a partir de diverses sortides
 </table>
 <p>Nota: la taula HTML anterior te una capçalera com un document HTML, però és diu thead,
  en comptes de head i es la primera fiera de la taula. Té un cos anomenat tbody, en comptes de bod i es la resta de la taula.
-La taula al definaix eltag table que agrupa thead i tbody. Toteslesfileres tant de thead hi ha elements individuals que són
- cel·les que pertanyen a la primera filera i s'anomenen th o table heading</p>
+La taula al definaix eltag table que agrupa thead i tbody. Totes les fileres tant de thead co del tbody es defineixen amb el tag tr, que vol dir <i>table row</i>.
+  Dintre de thead hi ha elements individuals que són cel·les que pertanyen a la primera
+    filera que s'anomenen th o <i>table heading</i>.
+    En el table body hi ha també fileres tr, però dintre d'aquestes fileres els elements individuals han de ser td, que significa <i>table data</i>.
+    per últim, s'han de tancar el table o body. Tots aquests elements es poden modificar amb CSS i fer la taula amb un estil propi</p>
+
+<p> Les fre</p>
 </body>
 </html>
